kubernetes/main/apps/teslamate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
  namespace: teslamate
  labels:
    alerts.nidr0x.win/enabled: "true"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: teslamate
  template:
    metadata:
      labels:
        app: teslamate
        alerts.nidr0x.win/enabled: "true"
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      containers:
        - name: teslamate
          image: teslamate/teslamate:4.3.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              memory: 356Mi
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
