kubernetes/main/apps/teslamate/mqtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslamate-mqtt
  labels:
    app: teslamate-mqtt
    homelab.nidr0x.dev/l2-announce: "true"
  annotations:
    io.cilium/lb-ipam-ips: 192.168.1.242
spec:
  type: LoadBalancer
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883
      targetPort: 1883
  selector:
    app: teslamate-mqtt
