kubernetes/main/apps/teslamate/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: teslamate
  name: teslamate
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: 4000
  selector:
    app: teslamate
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mqtt
  name: mqtt
spec:
  type: ClusterIP
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883
      targetPort: 1883
  selector:
    app: mqtt
