kubernetes/main/apps/teslamate/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-cilium-gateway
spec:
  podSelector:
    matchLabels:
      app: teslamate
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 4000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-database
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: teslamate-database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: teslamate
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-monitoring
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mqtt-clients
spec:
  podSelector:
    matchLabels:
      app: teslamate-mqtt
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: teslamate
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: homeassistant
          podSelector:
            matchLabels:
              app: homeassistant
        - ipBlock:
            cidr: 192.168.2.0/24
        - ipBlock:
            cidr: 192.168.10.0/24
      ports:
        - protocol: TCP
          port: 1883
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hostnetwork-to-mqtt
spec:
  endpointSelector:
    matchLabels:
      app: teslamate-mqtt
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
    - fromCIDR:
        - 192.168.2.0/24
        - 192.168.10.0/24
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
